@@ -8,6 +8,8 @@ UTILS:
 * class UTIL | introduce $location, $sub for single location cli argument, to be used in example template
 * pa_rule-edit introduce 'filter=(rule is.enabled)'
 * device-edit.php | introduction BETA script
+* class DH | extend method findXPath to accept array with multiple xPath strings
+* panos-xml-issue-detector | extend to support FAWKES config syntax
 
 EXAMPLES:
 * update template script to show how UTIL() class usage make your scripting life easier
